# quad-benchmark

./: CMakeLists.txt  README.md  build.cmd
shaders/: Common.hlsl  PS_Color.hlsl  VS_InstancedRect.hlsl  VS_Triangles.hlsl  VS_VertexPulledRect.hlsl  compile-shaders.cmd
src/: benchmarks.cpp  benchmarks.h  main.cpp
src/shaders/: PS_Color.h  PS_Color_SPIRV.h  VS_InstancedRect.h  VS_InstancedRect_SPIRV.h  VS_RawRect.h  VS_RawRect_SPIRV.h  VS_StructuredRect.h  VS_StructuredRect_SPIRV.h  VS_Triangles.h  VS_Triangles_SPIRV.h
